--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  scrollbar-width: thin; 
+  scrollbar-color: #b91c1c #000000; 
+}
+
+
+*::-webkit-scrollbar {
+  width: 8px; 
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #b91c1c; 
+  border-radius: 4px; 
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #000000; 
+}
